--- a/dna-src/zomes/chat/code/Cargo.toml
+++ b/dna-src/zomes/chat/code/Cargo.toml
@@ -7,16 +7,14 @@
   serde = "=1.0.89"
   serde_json = { version = "=1.0.39", features = ["preserve_order"] }
   serde_derive = "=1.0.89"
-  juniper = "0.11.1"
   derive_more = "0.9.0"
   utils = { path ="../../../utils" }
   validator = "0.9.0"
   validator_derive = "0.9.0"
 
-  hdk = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.34-alpha1" }
-  holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.34-alpha1" }
-  hdk-proc-macros = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.34-alpha1" }
-  holochain_json_derive = "=0.0.15"
+  hdk = "0.0.38-alpha9"
+  hdk_proc_macros = "0.0.38-alpha9"
+  holochain_json_derive = "0.0.17"
 
 [lib]
   path = "src/lib.rs"
