--- a/dna-src/app.json
+++ b/dna-src/app.json
@@ -1,14 +1,7 @@
 {
-  "name": "Peer Chat",
+  "name": "Basic Chat",
   "description": "Private secure p2p chat with conversations.",
-  "authors": [
-    {
-      "indentifier": "Philip Beadle <philip.beadle@holo.host>",
-      "public_key_source": "",
-      "signature": ""
-    }
-  ],
-  "version": "0.1.0",
+  "version": "0.1.1",
   "dht": {},
   "properties": null
 }
