--- a/dna-src/zomes/chat/code/Cargo.toml
+++ b/dna-src/zomes/chat/code/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-  name = "peer_chat"
+  name = "basic_chat"
   version = "0.0.16"
   authors = ["willem <willemolding@gmail.com>, Philip Beadle <philip.beadle@holo.host>"]
   edition = "2018"
